exports[`Check port reducer FLOWDESIGNER_PORT_ADD properly add the port to the port OrderedMap 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {
    "nodeId": Object {
      "portId": Object {},
    },
  },
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "attr": "attr",
      },
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "portId": Object {
      "data": Object {
        "type": "EMITTER",
      },
      "graphicalAttributes": Object {},
      "id": "portId",
      "nodeId": "nodeId",
      "portType": "portType",
      "position": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_ADDS to add multiple ports to port collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {
    "nodeId": Object {
      "portId2": Object {},
    },
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {
    "nodeId": Object {
      "portId1": Object {},
    },
  },
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "attr": "attr",
      },
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "portId1": Object {
      "data": Object {
        "type": "EMITTER",
      },
      "graphicalAttributes": Object {},
      "id": "portId1",
      "nodeId": "nodeId",
      "portType": "portType",
      "position": undefined,
    },
    "portId2": Object {
      "data": Object {
        "type": "SINK",
      },
      "graphicalAttributes": Object {},
      "id": "portId2",
      "nodeId": "nodeId",
      "portType": "portType",
      "position": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE should remove port from ports collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE_DATA on data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {},
      "graphicalAttributes": Object {
        "attr": "attr",
      },
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE_GRAPHICAL_ATTRIBUTES to remove attr from attr map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {},
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_SET_DATA to merge a new data in data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "string",
      },
      "graphicalAttributes": Object {
        "attr": "attr",
      },
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_SET_GRAPHICAL_ATTRIBUTES to merge a new attributes in attribute collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "attr": "attr",
        "selected": true,
      },
      "id": "id1",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id2": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id2",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
    "id3": Object {
      "data": undefined,
      "graphicalAttributes": undefined,
      "id": "id3",
      "nodeId": undefined,
      "portType": undefined,
      "position": Object {
        "x": 10,
        "y": 10,
      },
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;
